test: close review coverage gaps; guard WSDL temp-dir path traversal
Add tests for the gaps from the verification review and harden one path:
- ServiceDeserializerTest: end-to-end deserializeSystem over a serialized system
  archive laid out on disk, exercising both the resources-folder fallback and the
  direct source-path lookup, asserting the full reconstructed IntegrationSystem graph.
- SystemEntitySeamFieldFidelityTest: every field of the Environment/Operation export
  DTOs (and the inverse persistence mapping) is asserted, so a dropped field fails.
- SystemEntitySeamEnumParityTest: the name() sets of the library and catalog copies of
  IntegrationSystemType/OperationProtocol/SystemModelSource must stay identical.
- SpecificationParserConfigurationContextTest: an ApplicationContextRunner loads the
  parser config + OperationParserService, asserting the five @Parser beans and the
  @Lazy cycle-break.

Harden WsdlSpecificationParser.materializeSources: reject a source name that resolves
outside the per-call temp working directory (SpecificationParserException), mirroring
DirectoryPropertyFileSource, with a negative test.

Addresses findings 3, 4, 5, 6, and 9 from the second verification review.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>